<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarEditCarActivity"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/grey_header">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageButton
                android:id="@+id/backButtonEditCarListActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_arrow_back_24"
                android:background="@null"
                android:tint="@color/white"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/content_description_button_back_to_car_list" />
            <TextView
                android:id="@+id/nameTitleEditCarListActivity"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/title_edit_new_car_activity"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@id/backButtonEditCarListActivity"/>
            <ImageButton
                android:id="@+id/checkButtonEditCarListActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_check_24"
                android:background="@null"
                android:tint="@color/white"
                android:contentDescription="@string/content_description_check_edit_car_button"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"/>
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>
    <ImageView
        android:id="@+id/imageViewCarInEditCarLayout"
        android:layout_width="0dp"
        android:layout_height="300dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarEditCarActivity"
        android:background="@color/grey"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/photoFloatingButtonInEditCarLayout"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:foreground="@drawable/ic_baseline_photo_camera_24"
        android:foregroundTint="@color/white"
        android:foregroundGravity="center"
        app:backgroundTint="@color/purple_500"
        app:layout_constraintEnd_toEndOf="@id/imageViewCarInEditCarLayout"
        app:layout_constraintBottom_toBottomOf="@id/imageViewCarInEditCarLayout"
        app:layout_constraintTop_toBottomOf="@id/imageViewCarInEditCarLayout"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/content_description_change_photo_button" />
    <TextView
        android:id="@+id/textBackgroundInfoInEditCarLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:text="@string/background_text_image_car_edit_car"
        app:layout_constraintStart_toStartOf="@id/imageViewCarInEditCarLayout"
        app:layout_constraintEnd_toEndOf="@id/imageViewCarInEditCarLayout"
        app:layout_constraintTop_toTopOf="@id/imageViewCarInEditCarLayout"
        app:layout_constraintBottom_toBottomOf="@id/imageViewCarInEditCarLayout"/>
    <TextView
        android:id="@+id/headerOwnerNameInEditCarLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/owner_name_header_edit_car"
        android:textColor="@color/purple_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewCarInEditCarLayout"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textSize="16sp"/>
    <EditText
        android:id="@+id/editOwnerNameInEditCarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerOwnerNameInEditCarLayout"
        android:backgroundTint="@color/purple_line"
        android:hint="@string/hint_owner_name_edit_car"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>
    <TextView
        android:id="@+id/headerProducerInEditCarLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editOwnerNameInEditCarLayout"
        android:text="@string/producer_header_edit_car"
        android:textColor="@color/purple_line"
        android:layout_marginStart="20dp"
        android:textSize="16sp"
        android:layout_marginTop="10dp"/>
    <EditText
        android:id="@+id/editProducerInEditCarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerProducerInEditCarLayout"
        android:layout_marginStart="20dp"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.45"
        android:hint="@string/hint_producer_edit_car"/>
    <TextView
        android:id="@+id/headerModelInEditCarLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/editModelInEditCarLayout"
        app:layout_constraintTop_toBottomOf="@id/editOwnerNameInEditCarLayout"
        android:text="@string/model_header_edit_car"
        android:textColor="@color/purple_line"
        android:textSize="16sp"
        android:layout_marginTop="10dp"/>
    <EditText
        android:id="@+id/editModelInEditCarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerModelInEditCarLayout"
        android:layout_marginEnd="20dp"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.45"
        android:hint="@string/hint_model_edit_car"/>
    <TextView
        android:id="@+id/headerPlateNumberInEditCarLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editProducerInEditCarLayout"
        android:textSize="16sp"
        android:text="@string/plate_number_header_edit_car"
        android:textColor="@color/purple_line"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"/>
    <EditText
        android:id="@+id/editNumberInEditCarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerPlateNumberInEditCarLayout"
        android:backgroundTint="@color/purple_line"
        android:hint="@string/hint_plate_number_edit_car"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>