<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarAddWorkActivity"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/grey_header">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageButton
                android:id="@+id/backButtonAddWorkListActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_arrow_back_24"
                android:background="@null"
                android:tint="@color/white"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/content_description_button_back_to_work_list" />
            <TextView
                android:id="@+id/nameTitleAddWorkListActivity"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/title_add_work_activity"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@id/backButtonAddWorkListActivity"/>
            <ImageButton
                android:id="@+id/checkButtonAddWorkListActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_check_24"
                android:background="@null"
                android:tint="@color/white"
                android:contentDescription="@string/content_description_check_add_work_button"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"/>
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>
    <TextView
        android:id="@+id/textTitleDateAddWork"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarAddWorkActivity"
        android:text="@string/application_date_header"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:textSize="18sp"/>
    <TextView
        android:id="@+id/dateWorkAddWork"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/textTitleDateAddWork"
        app:layout_constraintBottom_toBottomOf="@id/textTitleDateAddWork"
        app:layout_constraintTop_toTopOf="@id/textTitleDateAddWork"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        tools:text="31/12/2020"/>
    <TextView
        android:id="@+id/headerWorkName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textTitleDateAddWork"
        android:paddingStart="20dp"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.66"
        android:text="@string/work_name_header_add_work"
        android:textColor="@color/purple_line"
        android:layout_marginTop="30dp"/>
    <TextView
        android:id="@+id/headerCost"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/headerWorkName"
        app:layout_constraintBottom_toBottomOf="@id/headerWorkName"
        app:layout_constraintStart_toEndOf="@id/headerWorkName"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.33"
        android:textColor="@color/purple_line"
        android:text="@string/cost_header_add_work"/>
    <EditText
        android:id="@+id/editWorkName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerWorkName"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.55"
        android:layout_marginStart="20dp"
        android:hint="@string/hint_work_name_add_work"
        android:backgroundTint="@color/purple_line"/>
    <EditText
        android:id="@+id/editCost"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/headerCost"
        app:layout_constraintTop_toBottomOf="@id/headerCost"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.30"
        android:hint="@string/hint_cost_add_work"
        android:backgroundTint="@color/purple_line"/>
    <TextView
        android:id="@+id/headerDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/editWorkName"
        android:text="@string/description_header_add_work"
        android:textColor="@color/purple_line"
        android:layout_marginTop="40dp"/>
    <EditText
        android:id="@+id/editDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/headerDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/purple_line"
        android:hint="@string/hint_description_add_work"/>
    <ImageView
        android:id="@+id/statusWorkPendingAddWorkActivity"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_baseline_construction_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editDescription"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"/>
    <TextView
        android:id="@+id/textPendingAddWorkActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_status_pending_add_work"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/statusWorkPendingAddWorkActivity"
        app:layout_constraintEnd_toEndOf="@id/statusWorkPendingAddWorkActivity"
        app:layout_constraintTop_toBottomOf="@id/statusWorkPendingAddWorkActivity"/>
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_baseline_arrow_forward_24"
        app:layout_constraintStart_toEndOf="@+id/statusWorkPendingAddWorkActivity"
        app:layout_constraintEnd_toStartOf="@+id/statusProgressAddWorkActivity"
        app:layout_constraintTop_toTopOf="@+id/statusWorkPendingAddWorkActivity"
        app:layout_constraintBottom_toBottomOf="@+id/statusWorkPendingAddWorkActivity"/>

    <ImageView
        android:id="@+id/statusProgressAddWorkActivity"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_baseline_construction_24"
        app:layout_constraintStart_toEndOf="@id/statusWorkPendingAddWorkActivity"
        app:layout_constraintTop_toBottomOf="@id/editDescription"
        app:layout_constraintEnd_toStartOf="@id/statusCompletedAddWorkActivity"
        android:layout_marginTop="50dp"/>
    <TextView
        android:id="@+id/textProgressAddWorkActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_status_in_progress_add_work"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/statusProgressAddWorkActivity"
        app:layout_constraintEnd_toEndOf="@id/statusProgressAddWorkActivity"
        app:layout_constraintTop_toBottomOf="@id/statusProgressAddWorkActivity"/>
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_baseline_arrow_forward_24"
        app:layout_constraintStart_toEndOf="@+id/statusProgressAddWorkActivity"
        app:layout_constraintEnd_toStartOf="@+id/statusCompletedAddWorkActivity"
        app:layout_constraintTop_toTopOf="@+id/statusWorkPendingAddWorkActivity"
        app:layout_constraintBottom_toBottomOf="@+id/statusWorkPendingAddWorkActivity"/>
    <ImageView
        android:id="@+id/statusCompletedAddWorkActivity"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_baseline_construction_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editDescription"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"/>
    <TextView
        android:id="@+id/textCompletedAddWorkActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_status_completed_add_work"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/statusCompletedAddWorkActivity"
        app:layout_constraintEnd_toEndOf="@id/statusCompletedAddWorkActivity"
        app:layout_constraintTop_toBottomOf="@id/statusCompletedAddWorkActivity"/>


</androidx.constraintlayout.widget.ConstraintLayout>