<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.homework6_1.MainActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarCarListActivity"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/grey_header">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/titleCarListActivity"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/title_main_activity"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:gravity="center" />
            <ImageButton
                android:id="@+id/searchButtonCarListActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_search_24"
                android:background="@null"
                android:tint="@color/white"
                android:contentDescription="@string/content_description_search_button"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"/>
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewCars"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarCarListActivity" />
    <TextView
        android:id="@+id/mainBackgroundText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/background_text_in_main_activity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/mainFloatingButtonAddCars"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="50dp"
        android:padding="15dp"
        android:foreground="@drawable/ic_baseline_directions_car_24"
        android:foregroundTint="@color/white"
        android:foregroundGravity="center"
        app:backgroundTint="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/content_description_add_car_button" />


</androidx.constraintlayout.widget.ConstraintLayout>